# api-pagination-sandbox

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
backend/: Dockerfile  app.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: root.tsx  tailwind.css
frontend/app/components/ui/: alert.tsx  pagination.tsx
frontend/app/routes/: _index.tsx
frontend/app/routes/_index/: columns.tsx  data-table.tsx  endpoint.ts  page.tsx  route.tsx  skeleton.tsx
