[project]
name = "api-pagination-sandbox"
version = "0.1.0"
description = "API Sandbox with Random Bad Responses and Pagination"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
